gcc/testsuite/rust/compile/doc_isolated_cr_line_comment.rs
// { dg-error "Isolated CR" "" { target *-*-* } .+1 }
/// doc cr comment
pub fn main () { }
